--- a/index.html
+++ b/index.html
@@ -1,2 +1,1 @@
-***********************good eve all******************
-Good to see that output is coming********************
+*****jenkins is auto cicd -job ********************
