--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
 *****jenkins is auto cicd -job ********************
+&&&&&&&&&&&7&&&&done CICD   ****************************************8888*****    got output on webpage
